Remove multiple CC warning if they are sharing common domain
In my company people seem to enjoy to add everyone to CC. When replying to all, Evolution asks about confirmation and tells me that maybe I want to use BCC instead. Don't think it's necessary to ask if
- I am just "Replying All"
- The CC and To contacts share the same domain (they most-likely know each other)
Feel free to close, it's just brainstorming