I#1940 - Remove multiple CC warning if they are sharing common domain

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/1940